# h264_lib

./: CMakeLists.txt  README.md
adapter/: h264Adapter.cpp  h264Adapter.h
h264lib/: h264_decoder.cpp  h264_encoder.cpp  h264lib.cpp  h264lib.h
opencore/codecs_v2/utilities/colorconvert/src/: ccrgb24torgb16.cpp  cczoomrotation12.cpp  cczoomrotation16.cpp  cczoomrotation24.cpp  cczoomrotation32.cpp
opencore/codecs_v2/video/avc_h264/common/include/: avcapi_common.h
opencore/codecs_v2/video/avc_h264/common/src/: deblock.cpp  dpb.cpp
opencore/codecs_v2/video/avc_h264/dec/include/: pvavcdecoderinterface.h
opencore/codecs_v2/video/avc_h264/dec/src/: avcdec_api.cpp  header_dec.cpp  pred_inter.cpp  pvavcdecoder.cpp  slice_dec.cpp  vlc.cpp
opencore/codecs_v2/video/avc_h264/enc/src/: avcenc_api.cpp  bitstream_io.cpp  init.cpp  motion_comp.cpp  motion_est.cpp  pvavcencoder.cpp  rate_control.cpp  sad_inline.h
opencore/oscl/oscl/config/iphone/: osclconfig.h  osclconfig_memory.h
opencore/oscl/oscl/config/osx/: osclconfig_time.h  osclconfig_util.h
opencore/oscl/oscl/config/win32/: osclconfig.h
opencore/oscl/oscl/osclbase/src/: oscl_assert.cpp  oscl_queue.h  oscl_tls.cpp  oscl_vector.cpp  oscl_vector.h
opencore/oscl/oscl/osclmemory/src/: oscl_mem_mempool.cpp
opencore/oscl/oscl/osclutil/src/: oscl_priqueue.h
